--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,6 +16,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
+        <li><a style="color:white" href="/">EXP-VERSION</a></li>
         <li><a href="/">Zamów</a></li>
         <li><a href="/">Kontakt</a></li>
         <li><a href="/faq.html">FAQ</a></li>
