mcaffee mark added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/assets/styles/styles.css" />
     <link rel="icon" href="/assets/images/logo2.png" />
-    <script src="/assets/js/load-html.js"></script>
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/scrolling.js"></script>
+    {% include mcafee.html %}
   </head>
   <body>
     {% include navigation.html %}
